# evmone

./: .bumpversion.cfg  .clang-format  .clang-tidy  .dockerignore  .gdbinit  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CableCompilerSettings.cmake  Dockerfile  OldCMakeListstxt  Pipfile  README.md  adlr.cpp  appveyor.yml  bench_code.hex  bench_geth.sh  bootstrap.cmake  circle.yml  codecov.yml  funding.json  gdb_pretty_printers.py  gen_csv.py  guard_pages_poc.cpp  inv.tmpl  nanodurationpy.py  parse.py  run_bench.sh  run_test.sh  synth_bench.sh  test_code.hex  useful_commands.txt
lib/crypto/: CMakeLists.txt
lib/evmmax/: CMakeLists.txt  bn254.cpp  bn254.hpp  ecc.hpp  evmmax.cpp  evmmax.hpp  fastmod.h  mulMont256_spare_bits_asm_adx.S  mulx_mont_256-x86_64.s  poly_extension_field.cpp  poly_extension_field.hpp  secp256k1.cpp  secp256k1.hpp
lib/evmone/: CMakeLists.txt  advanced_analysis.cpp  advanced_analysis.hpp  advanced_execution.cpp  advanced_execution.hpp  advanced_instructions.cpp  analysis.cpp  analysis.hpp  baseline.cpp  baseline.hpp  baseline_analysis.cpp  baseline_execution.cpp  baseline_instruction_table.cpp  baseline_instruction_table.hpp  bigint.h  bigint384.h  caterpillar.cpp  caterpillar.hpp  constants.hpp  cpu_check.cpp  delegation.cpp  delegation.hpp  eips.hpp  eof.cpp  eof.hpp  evmone.cpp  execution.cpp  execution.hpp  execution_state.hpp  instruction_metrics.cpp  instruction_metrics.hpp  instruction_traits.hpp  instructions.cpp  instructions.hpp  instructions_calls.cpp  instructions_evm384.hpp  instructions_impl_map.hpp  instructions_implementations_table.hpp  instructions_op2fn.hpp  instructions_opcodes.hpp  (+16 more)
lib/evmone_precompiles/: CMakeLists.txt  blake2b.cpp  blake2b.hpp  bls.cpp  bls.hpp  bls12.cpp  bls12.hpp  bn254.cpp  bn254.hpp  ecc.hpp  ee.py  expmod.tmpl  hash_types.h  keccak.c  keccak.h  keccak.hpp  kzg.cpp  kzg.hpp  modexp.cpp  modexp.hpp  poly_extension_field.hpp  ripemd160.cpp  ripemd160.hpp  secp256k1.cpp  secp256k1.hpp  sha256.c  sha256.cpp  sha256.h  sha256.hpp  utils.hpp
test/: .clang-tidy  CMakeLists.txt  bench_evm.py  evm-bench.py  fast_stack_check_poc.cpp
test/bench/: .clang-tidy  CMakeLists.txt  bench.cpp  benchmarks.cpp  helpers.hpp  synthetic_benchmarks.cpp  synthetic_benchmarks.hpp
test/benchmarks/: CMakeLists.txt  bench_evm.py  benchmarks.cpp  blake2b_huff.inputs  blake2b_shifts.inputs  data.cpp  extract_inputs.py  pairing_eq2_v7_f2mulv3.evm  pairing_eq2_v7_f2mulv4.evm  weierstrudel.inputs
test/blockchaintest/: CMakeLists.txt  blockchaintest.cpp  blockchaintest.hpp  blockchaintest_loader.cpp  blockchaintest_runner.cpp
test/eofparse/: CMakeLists.txt  eofparse.cpp
test/eofparsefuzz/: CMakeLists.txt  eofparsefuzz.cpp
test/eoftest/: CMakeLists.txt  eoftest.cpp  eoftest.hpp  eoftest_runner.cpp
test/evmmax-precompiles/: CMakeLists.txt  evmmax-addmodx-bench-single.json  evmmax-addmodx-bench-vec.json  evmmax-mulmodx-bench-single.json  evmmax-mulmodx-bench-vec.json  evmmax-submodx-bench-single.json  evmmax-submodx-bench-vec.json  expmod.cpp  expmod.hpp  expmod.yul  ntt.cpp  ntt.hpp  nttfw.json  poseidon.cpp  poseidon.hpp  poseidon.json  poseidon_datacopy.json  poseidon_vec.json  poseidon_vec_datacopy.json
test/experimental/: CMakeLists.txt  eof_validation.cpp  jumpdest_analysis.cpp  jumpdest_analysis.hpp  opcode_manip.hpp
test/experiments/: calldata.c
test/fuzzer/: CMakeLists.txt  README.md  format.cpp  format.hpp  fuzz.cpp  fuzz_types.hpp  fuzz_ut.cpp  fuzzer.cpp  jumpdest_analysis_fuzz.cpp
test/integration/: CMakeLists.txt
test/internal_benchmarks/: .clang-tidy  CMakeLists.txt  analysis_bench.cpp  build_complete_tree.py  eof_jumpdest_section_bench.cpp  eof_validation_bench.cpp  evmc_types.cpp  evmmax_bench.cpp  find_jumpdest_bench.cpp  hex_bench.cpp  instructions_bench.cpp  lru_cache_bench.cpp  memory_allocation.cpp  precompiles_bench.cpp  push_data_parsing.cpp  realloc_behavior.cpp  test_bytecodes.cpp  test_bytecodes.hpp
test/precompiles_bench/: CMakeLists.txt  bls_bench_input.cpp  bls_bench_input.hpp  bls_precompiles_bench.cpp  precompiles_bench.cpp
test/precompiles_evm/: CMakeLists.txt  bn254_evm.cpp  bn254_evm.hpp  ecc_evm.cpp  ecc_evm.hpp  precompiles_evm.cpp  precompiles_evm.hpp  utils.hpp
test/ripemd160/: CMakeLists.txt  ripemd160.cpp  ripemd160.hpp  ripemd160_bench.cpp  ripemd160_test.cpp
test/state/: CMakeLists.txt  account.hpp  blob_schedule.hpp  block.cpp  block.hpp  bloom_filter.cpp  bloom_filter.hpp  errors.hpp  ethash_difficulty.cpp  ethash_difficulty.hpp  hash_utils.cpp  hash_utils.hpp  host.cpp  host.hpp  mpt.cpp  mpt.hpp  mpt_hash.cpp  mpt_hash.hpp  precompiles.cpp  precompiles.hpp  precompiles_cache.cpp  precompiles_cache.hpp  precompiles_ckzg.cpp  precompiles_ckzg.hpp  precompiles_gmp.cpp  precompiles_gmp.hpp  precompiles_internal.hpp  precompiles_openssl.cpp  precompiles_openssl.hpp  precompiles_silkpre.cpp  precompiles_silkpre.hpp  precompiles_stub.json  precompiles_stubs.cpp  precompiles_stubs.hpp  requests.cpp  requests.hpp  rlp.cpp  rlp.hpp  state.cpp  state.hpp  (+8 more)
test/statetest/: CMakeLists.txt  statetest.cpp  statetest.hpp  statetest_export.cpp  statetest_loader.cpp  statetest_logs_hash.cpp  statetest_runner.cpp
test/t8n/: CMakeLists.txt  t8n.cpp
test/testtool/: CMakeLists.txt  e1test.cpp
test/unittests/: CMakeLists.txt  analysis_test.cpp  baseline_analysis_test.cpp  blockchaintest_loader_test.cpp  bytecode_test.cpp  eof_example_test.cpp  eof_stack_validation_test.cpp  eof_test.cpp  eof_validation.cpp  eof_validation.hpp  eof_validation_stack_test.cpp  eof_validation_test.cpp  evm384_test.cpp  evm_benchmark_test.cpp  evm_calls_test.cpp  evm_control_flow_test.cpp  evm_eip2929_test.cpp  evm_eip3198_basefee_test.cpp  evm_eip3855_push0_test.cpp  evm_eip3860_initcode_test.cpp  evm_eip4844_blobhash_test.cpp  evm_eip663_dupn_swapn_test.cpp  evm_eip663_exchange_test.cpp  evm_eip7516_blobbasefee_test.cpp  evm_eip7676_prep_address_ext_test.cpp  evm_eip7939_clz_test.cpp  evm_eof_calls_test.cpp  evm_eof_function_test.cpp  evm_eof_rjump_test.cpp  evm_eof_test.cpp  evm_fixture.cpp  (+86 more)
(+117 files in other folders)
